--- a/OnlineBankingSystem/Views/Customer/Index.cshtml
+++ b/OnlineBankingSystem/Views/Customer/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<OnlineBankingSystem.Models.Domain.Customer>
 
-<h1>Employee Details</h1>
+<h1>Customer Details</h1>
 
 <table class="table">
     <thead>
